# Azure-Udemy

./: 1 Verifica faturas e contratos.sql  2 Atualiza aging.sql  3 Fila ouvidoria.sql  4 Motivos contratos.sql  5 Motivos faturas.sql  6 Pagamentos negociacoes.sql  7 Atualiza contatos.sql  8 Atualiza ultimo pagamento.sql  9 Atualiza negociação.sql  README.md  Teste parametro ssis.sql  carga_dbdw.mailing.contatos.vip.py  connection_air.py  contrato_cidade.py  conversao_json_cliente_documentos.py  conversao_json_cliente_emails.py  conversao_json_cliente_enderecos.py  conversao_json_cliente_filiacao.py  conversao_json_cliente_redes_sociais.py  conversao_json_cliente_tags.py  conversao_json_cliente_telefones.py  conversao_json_contratos.py~  conversao_json_contratos_descontos.py  conversao_json_contratos_unidade_atendimento.py  conversao_json_notas_impostos.py  conversao_json_notas_impostos_legado.py~  conversao_json_notas_impostos_legado_bkp.py  conversao_json_notas_produtos.py  conversao_json_notas_produtos_legado.py  conversao_json_remessa_detalhes_retorno.py  conversao_json_remessa_faturas.py  conversao_json_remessa_parcelas.py  environment.yml  index.html  main.py  main_copy.py  mkdocs.yml  output_log.txt  parametros.py  pipeline_voz.py  (+9 more)
ETL/: __init__.py  manager_db.py  manager_dw.py  manager_five9.py
dataflow/: df_product.json
dataset/: S3_CSV.json  S3_excel.json  SQLStaging.json  ds_adls_parquet.json  ds_adv_wrk_dw.json  ds_sql_adv_works.json  ds_sql_localhost.json  sql_dw.json  sql_oltp.json
dfFrazao01/: ARMTemplateForFactory.json  (+1 more)
factory/: dfFrazao01.json
(+125 files in other folders)
